--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "firebase": "^4.3.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
