--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/node": "^8.0.22",
     "@types/react": "^16.0.2",
     "@types/react-dom": "^15.5.3",
+    "@types/react-router-dom": "4.0.7",
+    "@types/uuid": "^3.4.2",
     "awesome-typescript-loader": "^3.2.3",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
@@ -52,12 +54,16 @@
     "stylelint-webpack-plugin": "^0.9.0",
     "tslint": "^5.6.0",
     "typescript": "^2.4.2",
+    "uuid": "^3.1.0",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
     "firebase": "^4.3.0",
+    "material-ui": "^1.0.0-beta.10",
+    "material-ui-icons": "^1.0.0-beta.10",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "4.2.0"
   }
 }
