--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
         "sourceMap": true,
         "noImplicitAny": false,
         "module": "commonjs",
-        "target": "es5",
-        "jsx": "react"
+        "target": "es6",
+        "jsx": "react",
+        "lib": ["es2017.object", "es7", "es6", "dom"]
     },
     "include": [
         "./src/**/*"
